# libcreate

./: .dockerignore  .gitignore  CMakeLists.txt
.github/workflows/: package.yaml  test.yaml
ci/: Dockerfile  entrypoint.sh
cmake/: Packing.cmake  Versioning.cmake
include/create/: create.h
output/: libcreate_3.1.4_arm64.deb
src/: create.cpp  data.cpp
tests/: test_data.cpp
